--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -479,7 +479,7 @@ needmoreshare2:
 #yandex_site_verification:
 
 # CNZZ count
-#cnzz_siteid:
+cnzz_siteid: true
 
 # Application Insights
 # See https://azure.microsoft.com/en-us/services/application-insights/
