--- a/_config.yml
+++ b/_config.yml
@@ -88,4 +88,7 @@ math:
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:novav/novav.github.io.git
+  branch: master
+  message: NN
