--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 小牛
 subtitle:
-description:
-keywords:
+description: 小牛的博客
+keywords: Machine Learning, 
 author: Simon shi
 language: en
 timezone:
