--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 小牛
 subtitle:
 description: 小牛的博客
-keywords: Machine Learning, 
+keywords: Machine Learning, Deep Learning 
 author: Simon shi
 language: en
 timezone:
